@startuml models
skinparam classAttributeIconSize 0
skinparam linetype ortho
left to right direction

title Queue Generation Configuration Models

' ============ Constants ============

note as Constants
  **VALID_PLACEHOLDERS** = {date, run, container, sample_id, sample_name, polarity}
  --
  **Runtime caches (set by ConfigBundle):**
  _polarity_technologies: set[str]
  _valid_samplers: set[str]
  --
  set_polarity_technologies(technologies: set[str])
  set_valid_samplers(samplers: set[str])
  get_polarity_technologies() -> set[str]
  get_valid_samplers() -> set[str]
  requires_polarity(technology: str) -> bool
end note

' ============ CSV-based Config Models ============

package "CSV Config Models" #LightBlue {
    class Sample {
        technology: str
        sample_id: str
        sample_name: str = ""
        description: str = ""
        inj_vol: float
        file_name_template: str
    }

    class SamplesConfig {
        samples: list[Sample]
        --
        get_by_technology(tech): list[Sample]
        get_sample(tech, sample_id): Sample | None
    }

    class Instrument {
        technology: str
        instrument: str
        methods_file: str
    }

    class InstrumentsConfig {
        instruments: list[Instrument]
        --
        get_by_technology(tech): list[Instrument]
        get_instrument(tech, instrument): Instrument | None
    }

    class InstrumentPattern {
        technology: str
        instrument: str
        queue_pattern: str
        is_default: bool
    }

    class InstrumentPatternsConfig {
        patterns: list[InstrumentPattern]
        --
        get_patterns_for_instrument(tech, instrument): list[InstrumentPattern]
        get_default_pattern(tech, instrument): InstrumentPattern | None
    }

    class Combination {
        instrument: str
        sampler: str
        output_format: str
    }

    class CombinationsConfig {
        combinations: list[Combination]
        --
        get_samplers_for_instrument(instrument): list[str]
        get_combination(instrument, sampler): Combination | None
    }

    SamplesConfig "1" *-- "*" Sample
    InstrumentsConfig "1" *-- "*" Instrument
    InstrumentPatternsConfig "1" *-- "*" InstrumentPattern
    CombinationsConfig "1" *-- "*" Combination
}

' ============ Sampler Models (config_models_samplers.py) ============

package "Sampler Models (config_models_samplers.py)" #LightGreen {
    class GridContainer {
        container_type: "Vial" | "Plate"
        position_source: "generated" | "input"
        fill_order: "row_major" | None = None
        position_format: str | None = None
        sample_rows: list[str] | None = None
        qc_row: str | None = None
        cols: list[int] | None = None
        samples_per_plate: int | None = None
    }

    class EvosepContainer {
        container_type: "Vial" | "Plate"
        position_source: "generated" | "input"
        fill_order: "sequential" | None = None
    }

    class GridSampler {
        description: str
        plates: list[str]
        qc_plate: str
        sample_rows: list[str] | None = None
        qc_row: str | None = None
        cols: list[int] | None = None
        samples_per_plate: int | None = None
        vial: GridContainer | None = None
        plate: GridContainer | None = None
    }

    class EvosepSampler {
        description: str
        position_type: "tray_position" = "tray_position"
        slots: list[int]
        positions_per_slot: int
        vial: EvosepContainer | None = None
        plate: EvosepContainer | None = None
    }

    class SamplersConfig {
        Vanquish: GridSampler | None = None
        MClass48: GridSampler | None = None
        Evosep: EvosepSampler | None = None
        --
        get_sampler_names(): list[str]
    }

    GridSampler "1" *-- "0..1" GridContainer : vial
    GridSampler "1" *-- "0..1" GridContainer : plate
    EvosepSampler "1" *-- "0..1" EvosepContainer : vial
    EvosepSampler "1" *-- "0..1" EvosepContainer : plate
    SamplersConfig "1" *-- "0..1" GridSampler : Vanquish
    SamplersConfig "1" *-- "0..1" GridSampler : MClass48
    SamplersConfig "1" *-- "0..1" EvosepSampler : Evosep
}

' ============ Queue Pattern Models (TOML) ============

package "Queue Pattern Models (TOML)" #LightYellow {
    class QueuePattern {
        description: str
        run_QC_after_n_samples: int
        start: list[str] = []
        middle: list[str] = []
        end: list[str] = []
        middle_extended: list[str] | None = None
        middle_extended_frequency_multiplier: int | None = None
    }

    class QueuePatternsConfig {
        patterns: dict[str, dict[str, QueuePattern]]
        --
        get_technologies(): list[str]
        get_pattern(tech, pattern_name): QueuePattern | None
        get_patterns_for_technology(tech): dict[str, QueuePattern]
        get_all_sample_refs(tech): set[str]
    }

    QueuePatternsConfig "1" *-- "*" QueuePattern
}

' ============ QC Layout Models (TOML) ============

package "QC Layout Models (TOML)" #LightPink {
    class EvosepPosition {
        tray: int
        position_start: int
        position_end: int
    }

    class QCLayoutsConfig {
        layouts: dict[str, dict[str, dict[str, QCPosition]]]
        --
        get_technologies(): list[str]
        get_layout(tech, sampler_key): dict[str, QCPosition] | None
        get_samplers_for_technology(tech): list[str]
    }

    note "**QCPosition** = str | EvosepPosition\n\nStructure: tech -> sampler_key -> sample_id -> QCPosition\nFallback: 'Vanquish.vial' -> 'Vanquish'" as N1
    QCLayoutsConfig .. N1
    EvosepPosition .. N1
}

' ============ Output Format Models (TOML) ============

package "Output Format Models (TOML)" #LightGray {
    class OutputFormat {
        description: str
        file_extension: str
        columns: dict[str, str]
    }

    class OutputFormatsConfig {
        formats: dict[str, OutputFormat]
        --
        get_format_names(): list[str]
        get_format(format_id): OutputFormat | None
    }

    OutputFormatsConfig "1" *-- "*" OutputFormat
}

@enduml
